--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@ BMIIIII
                text-align: center;
                font-size: 30px;
                font-family: sans-serif;
+                padding: 20px;
             }
         </style>
     </head>
     <body>
-        <h1>My Body Mass Index(Height and Width CSS</h1>
+        <h1>My Body Mass Index Height and Width CSS</h1>
         <div>My height is 157cm while my weight is 50kg and my BMI is 20.28 and I have a <q>Normal Weight</q>.<br>
         I am not obese and I am not underweight.</div>
     </body>
